--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -832,7 +832,7 @@ height: 90px;
     and (min-device-width : 375px) 
     and (max-device-width : 667px){
       .resbanner{
-        height: 730px ! important;
+        height: 638px ! important;
 
       }
  }
@@ -840,7 +840,8 @@ height: 90px;
     and (min-device-width : 414px) 
     and (max-device-width : 736px){
       .resbanner{
-        height: 735px ! important;
+        background-repeat: no-repeat;
+        height: 700px ! important;
 
       }
  }
@@ -848,7 +849,17 @@ height: 90px;
     and (min-device-width : 411px) 
     and (device-height : 731px){
       .resbanner{
-        height: 740px ! important;
+        margin-top: 120px ! important;
+        height: 695px ! important;
+
+      }
+ }
+  @media only screen 
+    and (min-device-width : 411px) 
+    and (device-height : 823px){
+      .resbanner{
+        margin-top: 120px ! important;
+        height: 750px ! important;
 
       }
  }
@@ -856,7 +867,7 @@ height: 90px;
     and (min-device-width : 320px) 
     and (device-height : 568px){
       .resbanner{
-        height: 567px ! important;
+        height: 570px ! important;
         background:50%;
 
       }
@@ -865,8 +876,10 @@ height: 90px;
     and (min-device-width : 393px) 
     and (device-height : 851px){
       .resbanner{
-        height: 860px ! important;
-        background:50%;
+        margin-top: 100px ! important;
+         background-size: cover;
+        height: 760px ! important;
+        /*background:50% ! important;*/
 
       }
       .webclientbackimg{
@@ -879,17 +892,20 @@ height: 90px;
     and (device-height : 812px) 
     and (-webkit-device-pixel-ratio : 3) { 
       .resbanner{
-        height: 810px ! important;
+        height: 710px ! important;
         background: 50%,100%;
+        margin-top: 100px ! important;
 
       }
  }
 
   .resbanner{
+    margin-top: 25px;
     background-image: url("/images/Mobile.png");
     background-size: cover;
     height: 648px;
     object-fit: contain;
+    background-color:#eeeeeeed;
     background-repeat: no-repeat;
   } 
   .arrow-right {
@@ -2997,7 +3013,7 @@ div.drop-container:after {
   and (-webkit-device-pixel-ratio: 3.5) 
   and (orientation: portrait) {
     .resbanner{
-      height: 850px ! important;
+      height: 750px ! important;
     }
 
 }
@@ -3007,7 +3023,7 @@ div.drop-container:after {
   and (-webkit-device-pixel-ratio: 3.5) 
   and (orientation: portrait) {
     .resbanner{
-      height: 830px ! important;
+      height: 730px ! important;
     }
 
 }
@@ -3098,3 +3114,14 @@ div.drop-container:after {
       margin-left: -85px;
     }
 } 
+
+@media only screen and (device-width : 1170px) and (device-height : 2532px) { 
+  .waterimg2{
+        left: 9%;
+  }
+  .boat_img2{
+    left: 197px;
+    top: 390px;
+  }
+}
+
