--- a/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
+++ b/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
@@ -585,6 +585,12 @@
     .navigationTitle_for6 {
             left: 98px ! important;
         }
+    .new_round-tabfor5{
+            margin-left: 36% ! important;
+    }  
+    .new_wizardNotefor5{
+        right: 1px ! important;
+    }  
   } 
 
    @media only screen and (device-width : 393px) and (device-height : 851px) { 
@@ -618,6 +624,16 @@
         .new_wizardNote_for6{
             right: -4px ! important;
         }
+  } 
+
+  @media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+ {
+   
+    .navigation_tab{
+      margin-left: 25px ! important;
+    }
   }  
 
 
