--- a/ui/website/src/blockTemplate/Maincomponent/Maincomponent.css
+++ b/ui/website/src/blockTemplate/Maincomponent/Maincomponent.css
@@ -31,7 +31,7 @@
     color: #000000bd ! important;
     font-size: 15px ! important;
     padding-left: 29px ! important;
-    height: 347px ! important;
+    height: 350px ! important;
     text-align: left ! important;
 }
 
@@ -249,7 +249,7 @@
 
 .ht_top{
     margin-top: 82px;
-    padding-left: 30px;
+    padding-left: 50px;
 }
 
 .mb_100{
@@ -275,7 +275,7 @@
 @media screen and (min-width:321px) and (max-width:768px){
 
     .responsivefooter{
-        height: 550px ! important;
+        /*height: 550px ! important;*/
     }
     .iogblock1text{
         height: 182px ! important;
@@ -409,4 +409,93 @@
     .iogimgblock3{
         height: 262px ! important;
     }
+ }
+
+@media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+    .pt20{
+      padding-top: 20px ! important;
+    }
+    .blogtext p{
+      height: 185px ! important;
+    }
+    .journytextblock{
+      height: 129px ! important;
+    }
+    .Journycaro9{
+      top:1145px ! important;
+    }
+    .add10{
+      left: 128px ! important;
+      top: -67px ! important;
+    }
+    .add9{
+      left:172px ! important;
+      top:157px ! important;
+    }
+    .Journycaro10{
+      left:285px ! important;
+    }
+    .newcard_HD{
+      width: 220px ! important;
+    }
+    .newcard {
+    width: 255px ! important;
+    }
+    .navigation_tab{
+      margin-left: 25px ! important;
+    }.new_wizardNotefor9{
+      right: 0px ! important;
+    }
+    .secondblockk {
+    /*padding-top: 100px;*/
+    }
+    .iogblock1text{
+        padding-top: 30px ! important;
+    }
+    .iogimgblock2{
+            height: 1007px;
+            margin-top: -170px;
+    }
+    .iogimgblock2 img{
+        object-fit: none;
+    }
+  } 
+
+  @media only screen 
+  and (min-width: 1440px) 
+  and (max-height: 900px)  {
+    .secondblockk{
+        padding-top: 31px ! important;
+    }
+
+  } 
+@media only screen and (device-width : 393px) and (device-height : 851px) { 
+    .Padding_career{
+        margin-top: -260px ! important;
+    } 
+    .panel-default>.panel-heading a{
+            padding: 10px 3px ! important;
+    }
+    .career_para-top2{
+        padding-left: 5px ! important;
+    }
  }   
+
+@media only screen and (device-width : 375px) and (device-height : 812px) { 
+    .Padding_career{
+        margin-top: -260px ! important;
+    } 
+   
+ }  
+
+ @media only screen and (device-width : 414px) and (device-height : 736px) { 
+    .Padding_career{
+        margin-top: -200px ! important;
+    } 
+   
+ }   
+
