--- a/ui/website/src/blockTemplate/TitleDescription/TitleDescription.css
+++ b/ui/website/src/blockTemplate/TitleDescription/TitleDescription.css
@@ -7,12 +7,18 @@
   
 
 }
+.title_description_div{
+  margin-top: 50px;
+}
 .title_Description{
 	color: #333 ! important;
 }
  .new-para-top{
  	font-size: 35px ! important;
 
+ }
+ .padding_left_TDesc{
+  padding-left: 50px ! important;
  }
 /*.onselecthover:hover{
   cursor: pointer;
@@ -21,3 +27,60 @@
   
 
 }*/
+
+@media only screen and (device-width : 393px) and (device-height : 851px) { 
+   .padding_left_TDesc{
+	  padding-left: 10px ! important;
+	 }
+   .title_description_div{
+      /*margin-top: 125px ! important;*/
+    }
+  }   
+ @media only screen and (device-width : 360px) and (device-height : 640px) { 
+   .padding_left_TDesc{
+    padding-left: 10px ! important;
+   } 
+  }
+   @media only screen and (device-width : 411px) and (device-height : 731px) {
+
+    .padding_left_TDesc{
+      padding-left: 10px ! important;
+     } 
+
+
+   } 
+    @media only screen and (device-width : 411px) and (device-height : 823px) {
+
+    .padding_left_TDesc{
+      padding-left: 10px ! important;
+     } 
+      .title_description_div{
+      margin-top: 125px ! important;
+    } 
+
+   }  
+   @media only screen and (device-width : 320px) and (device-height : 568px) {
+
+    .padding_left_TDesc{
+      padding-left: 10px ! important;
+     } 
+
+   }  
+   @media only screen and (device-width : 375px) and (device-height : 667px) {
+
+    .padding_left_TDesc{
+      padding-left: 10px ! important;
+     } 
+
+   }  
+
+    @media only screen and (device-width : 414px) and (device-height : 736px) {
+
+    .padding_left_TDesc{
+      padding-left: 10px ! important;
+     } 
+    .title_description_div{
+      margin-top: 125px ! important;
+    }
+
+   }  
