Karuna added changes

--- a/ui/website/src/blockTemplate/ConsultDownstream/ConsultDownstream.css
+++ b/ui/website/src/blockTemplate/ConsultDownstream/ConsultDownstream.css
@@ -743,6 +743,15 @@
     top:99em ! important;
    }
 } 
+@media only screen and (device-width : 411px) and (device-height : 731px) { 
+
+   #consultdown_data3{
+    top:108em ! important;
+   }
+   #consultdown_img3{
+    top:99em ! important;
+   }
+} 
 @media only screen and (device-width : 1024px) and (device-height : 1366px) { 
 
    #consultdown_data3{
