--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -832,7 +832,7 @@ height: 90px;
     and (min-device-width : 375px) 
     and (max-device-width : 667px){
       .resbanner{
-        height: 638px ! important;
+        height: 660px ! important;
 
       }
  }
@@ -841,7 +841,7 @@ height: 90px;
     and (max-device-width : 736px){
       .resbanner{
         background-repeat: no-repeat;
-        height: 700px ! important;
+        height: 730px ! important;
 
       }
  }
@@ -849,8 +849,8 @@ height: 90px;
     and (min-device-width : 411px) 
     and (device-height : 731px){
       .resbanner{
-        margin-top: 120px ! important;
-        height: 695px ! important;
+        /*margin-top: 130px ! important;*/
+        height: 730px ! important;
 
       }
  }
@@ -858,7 +858,7 @@ height: 90px;
     and (min-device-width : 411px) 
     and (device-height : 823px){
       .resbanner{
-        margin-top: 120px ! important;
+        /*margin-top: 120px ! important;*/
         height: 750px ! important;
 
       }
@@ -867,7 +867,7 @@ height: 90px;
     and (min-device-width : 320px) 
     and (device-height : 568px){
       .resbanner{
-        height: 570px ! important;
+        /*height: 570px ! important;*/
         background:50%;
 
       }
@@ -876,10 +876,12 @@ height: 90px;
     and (min-device-width : 393px) 
     and (device-height : 851px){
       .resbanner{
-        margin-top: 110px ! important;
-         background-size: cover;
-        height: 760px ! important;
-        /*background:50% ! important;*/
+       background-image: url(/images/Mobile.png);
+        background-size: cover;
+        height: 853px ! important;
+        object-fit: contain;
+         background: 50%; 
+        background-repeat: no-repeat;
 
       }
       .webclientbackimg{
@@ -894,18 +896,18 @@ height: 90px;
       .resbanner{
         height: 710px ! important;
         background: 50%,100%;
-        margin-top: 100px ! important;
+        /*margin-top: 100px ! important;*/
 
       }
  }
 
   .resbanner{
-    margin-top: 105px;
+    /*margin-top: 105px;*/
     background-image: url("/images/Mobile.png");
     background-size: cover;
-    height: 700px ! important;
+    /*height: 730px ! important;*/
     object-fit: contain;
-    background-color:#eeeeeeed;
+    /*background:50%;*/
     background-repeat: no-repeat;
   } 
   .arrow-right {
