--- a/ui/website/src/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
+++ b/ui/website/src/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
@@ -442,6 +442,12 @@
     margin-bottom: 0px ! important;
   }
 }
+@media only screen and (device-width : 393px) and (device-height : 851px) { 
+  .webpageshopcont{
+  /*margin-left: 30px ! important;*/
+
+ }
+} 
 
 @media only screen 
   and (min-width: 1024px) 
