--- a/ui/website/src/common/Header/mobileheaderwithupprwhitespace.css
+++ b/ui/website/src/common/Header/mobileheaderwithupprwhitespace.css
@@ -315,24 +315,43 @@
 
 @media screen and (max-width: 600px) {
 
-  .userNameDiv{
-    z-index: 0;
-  }
+   .topnav a{
+    /*font-size: 0px ! important;*/
+   }
+   .topnav a.icon{
+    top:-3px ! important;
+     right: -8px ! important;
+   }
+   .headerlogo img {
+    height: 74px ! important;
+    z-index: 1000;
+    margin-left: -12px;
+    margin-top: 12px;
+    }
+    .ct-topbar{
+      right: -58px ! important;
+    }
+
+
   .topnav.responsive {
     position: absolute;
     background-color: #333333f5;
-    top: -45px;
+    /*top: -45px;*/
     width: 410px;
-    height: 529px;
+    top:-82px;
+    height: 570px;
+    /*height: 529px;*/
     left: -14px;
-    z-index: 1000;
+    z-index: 1001;
     padding-top: 60px;
    }
   .topnav.responsive .icon {
     position: absolute;
     color:#f19000;
     right: 20px;
-    top: 0;
+    top: 3px;
+    font-size: 22px ;
+
   }
   .topnav.responsive a {
     float: none;
@@ -598,27 +617,33 @@ border:1px solid #eee ! important;
 
  @media only screen and (device-width : 375px) and (device-height : 812px) { 
    .topnav a{
-    /*font-size: 0px ! important;*/
+       padding: 12px 22px ! important;
    }
    .topnav a.icon{
-    /*top:-15px ! important;*/
-     /*right: -16px ! important;*/
+    top: -11px ! important;
+    right: 9px ! important;
    }
    .headerlogo img {
     height: 68px ! important;
-    /*z-index: 1000;*/
-    margin-left: -12px;
-    margin-top: 12px;
+    z-index: 1000;
+    margin-left: 6px;
+    margin-top: 15px;
     }
     .ct-topbar{
-      left:293px ! important;
-      top:38px;
+      left:263px ! important;
+    }
+    .dropdown .dropbtn{
+     padding: 8px 2px ! important;
+    }
+    .navbar-static-top{
+      background-color: #fff;
+      height: 95px;
     }
 
   }  
   @media only screen and (device-width : 414px) and (device-height : 736px) { 
    .topnav a{
-    /*font-size: 0px ! important;*/
+   padding: 14px 24px;
    }
    .topnav a.icon{
     top:-15px ! important;
@@ -626,136 +651,183 @@ border:1px solid #eee ! important;
    }
    .headerlogo img {
     height: 68px ! important;
-    /*z-index: 1000;*/
-    margin-left: -12px;
+    z-index: 1000;
+    margin-left: 9px;
     margin-top: 12px;
     }
     .ct-topbar{
       right: -78px ! important;
     }
+    .navbar-static-top{
+      background-color: #fff;
+      height: 95px;
+    }
 
   }  
   @media only screen and (device-width : 375px) and (device-height : 667px) { 
    .topnav a{
-    /*font-size: 0px ! important;*/
+     padding: 14px 24px;
    }
    .topnav a.icon{
-    /*top:-15px ! important;*/
-    /*right: -16px ! important;*/
+    top: -11px ! important;
+    right: 9px ! important;
    }
    .headerlogo img {
     height: 68px ! important;
-    /*z-index: 1000;*/
-    margin-left: -9px;
+    z-index: 1000;
+    margin-left: 9px;
     margin-top: 12px;
     }
     .ct-topbar{
       left: 308px ! important;
-      top:38px;
+    }
+    .navbar-static-top{
+      background-color: #fff;
+       height: 95px;
     }
 
   } 
   @media only screen and (device-width : 320px) and (device-height : 568px) { 
    .topnav a{
-    /*font-size: 0px ! important;*/
+    padding: 14px 24px;
    }
    .topnav a.icon{
-    /*top:-15px ! important;*/
-    /*right: -16px ! important;*/
+    top: -11px ! important;
+    right: 9px ! important;
    }
    .headerlogo img {
-    height: 68px ! important;
-    /*z-index: 1000;*/
-    margin-left: -9px;
+    height: 74px ! important;
+    z-index: 1000;
+    margin-left: 9px;
     margin-top: 12px;
     }
     .ct-topbar{
       left: 254px ! important;
+    }
+    .navbar-static-top{
+      background-color: #fff;
+       height: 95px;
     }
 
   }  
 
   @media only screen and (device-width : 411px) and (device-height : 823px) { 
    .topnav a{
-    /*font-size: 0px ! important;*/
+    padding: 14px 24px;
    }
    .topnav a.icon{
-    top:-15px ! important;
+    top:-12px ! important;
     right: -16px ! important;
    }
    .headerlogo img {
-    height: 68px ! important;
-    /*z-index: 1000;*/
-    margin-left: -9px;
+    height: 74px ! important;
+    z-index: 1000;
+    margin-left: 9px;
     margin-top: 12px;
     }
     .ct-topbar{
       left: 344px ! important;
-      top:20px;
+    }
+    .navbar-static-top{
+      background-color: #fff;
+      height: 100px;
     }
 
   }  
 
  @media only screen and (device-width : 411px) and (device-height : 731px) { 
    .topnav a{
-    /*font-size: 0px ! important;*/
+   padding: 14px 24px;
    }
    .topnav a.icon{
-    top:-11px ! important;
+    top:-15px ! important;
     right: -16px ! important;
    }
    .headerlogo img {
-    height: 68px ! important;
-    /*z-index: 1000;*/
-    margin-left: -9px;
+    height: 74px ! important;
+    z-index: 1000;
+    margin-left: 9px;
     margin-top: 12px;
     }
     .ct-topbar{
       left: 344px ! important;
-      top:25px;
+    }
+    .navbar-static-top{
+      background-color: #fff;
+      height: 100px;
+    }
+    .topnav.responsive {
+      top:10px ! important;
     }
 
   }  
 
    @media only screen and (device-width : 360px) and (device-height : 640px) { 
    .topnav a{
-    /*font-size: 0px ! important;*/
+    padding: 14px 24px;
    }
    .topnav a.icon{
-    /*top:-15px ! important;*/
-    /*right: -16px ! important;*/
+    top:-15px ! important;
+    right: -16px ! important;
    }
    .headerlogo img {
-    height: 68px ! important;
-    /*z-index: 1000;*/
-    margin-left: -9px;
+    height: 74px ! important;
+    z-index: 1000;
+    margin-left: -11px;
     margin-top: 12px;
     }
     .ct-topbar{
       left: 293px ! important;
+    }
+    .navbar-static-top{
+      background-color: #fff;
     }
 
   }  
 
 @media only screen and (device-width : 393px) and (device-height : 851px) { 
    .topnav a{
-    /*font-size: 0px ! important;*/
+   padding: 12px 25px ! important;
    }
    .topnav a.icon{
-   top: -10px ! important;
-    right: -10px ! important;
+   top: -13px ! important;
+    right: -5px ! important;
+    font-size: 22px;
    }
    .headerlogo img {
-    height: 68px ! important;
-    /*z-index: 1000;*/
-    margin-left: -9px;
+    height: 74px ! important;
+    z-index: 1000;
+    margin-left: 9px;
     margin-top: 12px;
     }
     .ct-topbar{
       left: 327px ! important;
     }
+    .dropdown .dropbtn{
+          padding: 10px 2px;
+    }
+    .navbar-static-top{
+      background-color: #fff;
+      height: 100px;
+    }
+    .topnav.responsive{
+      top:-85px;
+      height: 570px;
+    }
 
   }  
+  @media only screen and (device-width : 1024px) and (device-height : 1366px) { 
+   .dropdown .dropbtn{
+        padding: 14px 7px ! important;
+   }
+   .footer-two{
+    height: 440px ! important;
+   }
+
+  }  
+
+
+
 
 
 
