--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -859,7 +859,7 @@ height: 90px;
     and (device-height : 823px){
       .resbanner{
         /*margin-top: 120px ! important;*/
-        height: 750px ! important;
+        height: 775px ! important;
 
       }
  }
@@ -3009,7 +3009,7 @@ div.drop-container:after {
 
 }
 
-@media screen 
+/*@media screen 
   and (device-width: 411px) 
   and (device-height: 823px) 
   and (-webkit-device-pixel-ratio: 3.5) 
@@ -3018,7 +3018,7 @@ div.drop-container:after {
       height: 750px ! important;
     }
 
-}
+}*/
 @media screen 
   and (device-width: 411px) 
   and (device-height: 731px) 
