Karuna added changes

--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -828,6 +828,12 @@ height: 90px;
   .result_hover {
     border: 1px solid #fff;
   }
+
+@media screen and (max-width: 600px) {
+   .resbanner{
+        height: 730px ! important;
+       }    
+}  
   @media only screen 
     and (min-device-width : 375px) 
     and (max-device-width : 667px){
@@ -837,11 +843,19 @@ height: 90px;
       }
  }
   @media only screen 
-    and (min-device-width : 414px) 
-    and (max-device-width : 736px){
+    and (min-device-width : 375px) 
+    and (max-device-width : 667px){
+      .resbanner{
+        height: 660px ! important;
+
+      }
+ }
+  @media only screen 
+    and (min-device-width : 360px) 
+    and (max-device-width : 640px){
       .resbanner{
         background-repeat: no-repeat;
-        height: 730px ! important;
+        height: 665px ! important;
 
       }
  }
@@ -894,7 +908,7 @@ height: 90px;
     and (device-height : 812px) 
     and (-webkit-device-pixel-ratio : 3) { 
       .resbanner{
-        height: 710px ! important;
+        height: 770px ! important;
         background: 50%,100%;
         /*margin-top: 100px ! important;*/
 
@@ -3009,7 +3023,7 @@ div.drop-container:after {
 
 }
 
-/*@media screen 
+@media screen 
   and (device-width: 411px) 
   and (device-height: 823px) 
   and (-webkit-device-pixel-ratio: 3.5) 
@@ -3018,7 +3032,7 @@ div.drop-container:after {
       height: 750px ! important;
     }
 
-}*/
+}
 @media screen 
   and (device-width: 411px) 
   and (device-height: 731px) 
