--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -233,6 +233,10 @@
     width: 70px;
     display: block;
   }
+   .headerflow{
+      background-color: #fff;
+      height: 130px ! important;
+    }
   .ct-topbar
   {
 
