--- a/ui/website/src/blockTemplate/ConsultDownstream/ConsultDownstream.css
+++ b/ui/website/src/blockTemplate/ConsultDownstream/ConsultDownstream.css
@@ -743,6 +743,11 @@
     top:99em ! important;
    }
 } 
+@media only screen and (device-width : 1440px) and (device-height : 900px) {
+.downimgtext{
+  left:22em;
+} 
+}
 @media only screen and (device-width : 411px) and (device-height : 731px) { 
 
    #consultdown_data3{
