--- a/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
+++ b/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
@@ -12,6 +12,10 @@
 .new_tab{
     border: none ! important;  
 }
+ .navigation_tab{
+      margin-left: 32px ! important;
+    }
+
 .new_wizardNote
  {
     /* border: 1px solid; */
@@ -624,17 +628,52 @@
         .new_wizardNote_for6{
             right: -4px ! important;
         }
-  } 
+  }
+
+@media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+     .navigation_tab{
+      margin-left: 25px ! important;
+    }
+
+  }
 
   @media only screen 
   and (min-width: 1024px) 
   and (max-height: 1366px) 
- {
-   
-    .navigation_tab{
-      margin-left: 25px ! important;
+  and (orientation: landscape) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+     .navigation_tab{
+      margin-left: 35px ! important;
     }
-  }  
+    .new_wizardNotefor9{
+        right: 15px ! important;
+    }
+
+}
+   
+   
+  @media only screen 
+  and (device-width: 1440px) 
+  and (device-height: 900px) 
+
+  /*and (orientation: landscape) */
+ { 
+  .B3T_challengesDiv{
+    margin-left: 35px;
+    width: 347px;
+  }
+  .B4T_ServicesDiv{
+    margin-left: 80px;
+  }
+  .navigation_tab{
+    margin-left: 35px ! important;
+  }
+ 
+ }  
 
 
 
