--- a/ui/website/src/common/Footer/Footer.css
+++ b/ui/website/src/common/Footer/Footer.css
@@ -566,6 +566,18 @@ ul.no-icon-list1 {
       right: 0px ! important;
     }
   } 
+  @media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+     .footer-two{
+    height: 440px ! important;
+  }
+  .topnav a{
+        padding: 14px 7px;
+  }
+}
 
   @media only screen 
   and (min-width: 1024px) 
