--- a/ui/website/src/allBlocks/Challenges/Challenges.css
+++ b/ui/website/src/allBlocks/Challenges/Challenges.css
@@ -27,3 +27,78 @@
     /*color: #7b6f6f;*/
     /*margin-left: 15px;*/
 }
+.Policy_Challenges{
+  padding: 30px;
+}
+@media only screen and (device-width : 393px) and (device-height : 851px) {
+  .Policy_Challenges{
+    padding: 0px;
+  }
+  .Policy_Challenges ul{
+    padding-left: 23px ! important;
+  }
+
+}
+@media only screen and (device-width : 360px) and (device-height : 640px) {
+   .Policy_Challenges{
+    padding: 0px;
+  }
+  .Policy_Challenges ul{
+    padding-left: 23px ! important;
+  }
+}
+@media only screen and (device-width : 411px) and (device-height : 731px) {
+   .Policy_Challenges{
+    padding: 0px;
+  }
+  .Policy_Challenges ul{
+    padding-left: 23px ! important;
+  }
+}
+@media only screen and (device-width : 411px) and (device-height : 823px) {
+  .Policy_Challenges{
+    padding: 0px;
+  }
+  .Policy_Challenges ul{
+    padding-left: 23px ! important;
+  }
+
+}
+@media only screen and (device-width : 320px) and (device-height : 568px) {
+  .Policy_Challenges{
+    padding: 0px;
+  }
+  .Policy_Challenges ul{
+    padding-left: 23px ! important;
+  }
+
+}
+@media only screen and (device-width : 375px) and (device-height : 667px) {
+  .Policy_Challenges{
+    padding: 0px;
+  }
+  .Policy_Challenges ul{
+    padding-left: 23px ! important;
+  }
+
+}
+@media only screen and (device-width : 414px) and (device-height : 736px) {
+  .Policy_Challenges{
+    padding: 0px;
+  }
+  .Policy_Challenges ul{
+    padding-left: 23px ! important;
+  }
+
+}
+@media only screen and (device-width : 375px) and (device-height : 812px) {
+  .Policy_Challenges{
+    padding: 0px;
+  }
+  .Policy_Challenges ul{
+    padding-left: 23px ! important;
+  }
+
+}
+
+
