--- a/ui/website/src/allBlocks/Overview/Overview.css
+++ b/ui/website/src/allBlocks/Overview/Overview.css
@@ -96,6 +96,82 @@
     margin-left: 195px ! important;
   }
 }
+.Plicy_padding{
+  padding: 80px;
+}
+@media only screen and (device-width : 393px) and (device-height : 851px) {
+  .Plicy_padding{
+    padding: 25px;
+  }
+  .policyMainDiv{
+    padding: 10px;
+  }
+
+}
+@media only screen and (device-width : 360px) and (device-height : 640px) {
+  .Plicy_padding{
+    padding: 25px;
+  }
+   .policyMainDiv{
+    padding: 10px;
+  }
+
+}
+@media only screen and (device-width : 411px) and (device-height : 731px) {
+
+  .Plicy_padding{
+    padding: 25px;
+  }
+   .policyMainDiv{
+    padding: 10px;
+  }
+}
+@media only screen and (device-width : 411px) and (device-height : 823px) {
+
+  .Plicy_padding{
+    padding: 25px;
+  }
+   .policyMainDiv{
+    padding: 10px;
+  }
+}
+@media only screen and (device-width : 320px) and (device-height : 568px) {
+
+  .Plicy_padding{
+    padding: 10px;
+  }
+   .policyMainDiv{
+    padding: 10px;
+  }
+}
+@media only screen and (device-width : 375px) and (device-height : 667px) {
+
+  .Plicy_padding{
+    padding: 10px;
+  }
+   .policyMainDiv{
+    padding: 10px;
+  }
+}
+@media only screen and (device-width : 414px) and (device-height : 736px) {
+
+  .Plicy_padding{
+    padding: 10px;
+  }
+   .policyMainDiv{
+    padding: 10px;
+  }
+}
+@media only screen and (device-width : 375px) and (device-height : 812px) {
+
+  .Plicy_padding{
+    padding: 10px;
+  }
+   .policyMainDiv{
+    padding: 10px;
+  }
+}
+
 
 
    
