--- a/ui/website/src/blockTemplate/ImgBlock/ImgBlock.css
+++ b/ui/website/src/blockTemplate/ImgBlock/ImgBlock.css
@@ -36,7 +36,8 @@
 	    padding: 0px ! important;
 	}
 	.img1 img{
-		height: 375px ! important;
+		width:100%;
+		 height: 375px ! important;
         /*object-fit: contain;*/
 	 }
 
