--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -233,10 +233,6 @@
     width: 70px;
     display: block;
   }
-   .headerflow{
-      background-color: #fff;
-      height: 130px ! important;
-    }
   .ct-topbar
   {
 
@@ -611,16 +607,12 @@ border:1px solid #eee ! important;
    .headerlogo img {
     height: 68px ! important;
     /*z-index: 1000;*/
-    /*margin-left: -12px;*/
-    margin-top: 12px;
+    margin-left: -12px;
+    margin-top: 0px;
     }
     .ct-topbar{
       left:293px ! important;
       top:38px;
-    }
-     .headerflow{
-      background-color: #fff;
-      height: 130px ! important;
     }
 
   }  
@@ -641,10 +633,6 @@ border:1px solid #eee ! important;
     .ct-topbar{
       right: -78px ! important;
     }
-     .headerflow{
-      background-color: #fff;
-      height: 115px ! important;
-    }
 
   }  
   @media only screen and (device-width : 375px) and (device-height : 667px) { 
@@ -658,16 +646,12 @@ border:1px solid #eee ! important;
    .headerlogo img {
     height: 68px ! important;
     /*z-index: 1000;*/
-    /*margin-left: -9px;*/
-    margin-top: 12px;
+    margin-left: -9px;
+    margin-top: -12px;
     }
     .ct-topbar{
       left: 308px ! important;
       top:38px;
-    }
-     .headerflow{
-      background-color: #fff;
-      height: 120px ! important;
     }
 
   } 
@@ -682,15 +666,11 @@ border:1px solid #eee ! important;
    .headerlogo img {
     height: 68px ! important;
     /*z-index: 1000;*/
-    /*margin-left: -9px;*/
+    margin-left: -9px;
     margin-top: 12px;
     }
     .ct-topbar{
       left: 254px ! important;
-    }
-     .headerflow{
-      background-color: #fff;
-      height: 110px ! important;
     }
 
   }  
@@ -706,16 +686,12 @@ border:1px solid #eee ! important;
    .headerlogo img {
     height: 68px ! important;
     /*z-index: 1000;*/
-    /*margin-left: -9px;*/
+    margin-left: -9px;
     margin-top: 12px;
     }
     .ct-topbar{
       left: 344px ! important;
       top:20px;
-    }
-     .headerflow{
-      background-color: #fff;
-      height: 130px ! important;
     }
 
   }  
@@ -732,15 +708,11 @@ border:1px solid #eee ! important;
     height: 68px ! important;
     /*z-index: 1000;*/
     /*margin-left: -9px;*/
-    margin-top: 10px;
+    margin-top: -12px;
     }
     .ct-topbar{
       left: 344px ! important;
       top:25px;
-    }
-     .headerflow{
-      background-color: #fff;
-      height: 115px ! important;
     }
 
   }  
@@ -756,15 +728,15 @@ border:1px solid #eee ! important;
    .headerlogo img {
     height: 68px ! important;
     /*z-index: 1000;*/
-    /*margin-left: -9px;*/
-    margin-top: 12px;
+    margin-left: -9px;
+    margin-top: -12px;
     }
     .ct-topbar{
       left: 293px ! important;
+       margin-top: 8px;
     }
-     .headerflow{
-      background-color: #fff;
-      height: 115px ! important;
+     .headerflowscroll{
+      height: 100px;
     }
 
   }  
@@ -774,22 +746,23 @@ border:1px solid #eee ! important;
     /*font-size: 0px ! important;*/
    }
    .topnav a.icon{
-   /*top: -10px ! important;*/
-    right: -10px ! important;
+   top: -10px ! important;
+    right: -5px ! important;
    }
    .headerlogo img {
     height: 68px ! important;
     /*z-index: 1000;*/
     /*margin-left: -9px;*/
-    margin-top: 20px;
+    margin-top: -10px;
     }
     .ct-topbar{
-      left: 327px ! important;
+      left: 317px ! important;
+      margin-top: 8px;
     }
-    .headerflow{
-      background-color: #fff;
-      height: 130px ! important;
+    .headerflowscroll{
+      height: 100px;
     }
+
 
   }  
 
