--- a/ui/website/src/common/Header/mobileheaderwithupprwhitespace.css
+++ b/ui/website/src/common/Header/mobileheaderwithupprwhitespace.css
@@ -1,4 +1,4 @@
-.contactModalBody{
+/*.contactModalBody{
   padding-top: 0px;
 }
 .closeButton{
@@ -22,7 +22,6 @@
   transition-duration: 0.7s;
   transition: width 1s;
   border: none;
-  /*z-index: 100000;*/
   top:62px;
 }
 .envelopeIcon{
@@ -34,8 +33,8 @@
 }
 .dropdownforAbiutus{
   margin-top: 45px;
-}
-.contactBarres{
+}*/
+/*.contactBarres{
   position: absolute;
   left: 0px;
   background-color: #f19000;
@@ -49,12 +48,10 @@
   transition-duration: 0.7s;
   transition: width 1s;
   border: none;
-  /*z-index: 100000;*/
   top:95px;
 }
 .navbar-static-top{
   z-index: 0 ! important;
-  /*padding-top: 20px;*/
 }
 .rescontactBar{
   position: absolute;
@@ -76,11 +73,11 @@
   cursor: pointer;
   color: #fff;
   width : 100px;
-  /*right: 5px;*/
-  display: none;
-}
 
-.contactBar:hover i{
+  display: none;
+}*/
+
+/*.contactBar:hover i{
   display: none;
   font-size: 50px;
 }
@@ -120,13 +117,12 @@
   height: 115px;
   box-shadow: 0 10px 14px rgba(92,141,255,.2);
   transition-duration: 0.8s;
-}
+}*/
 
-#container {
+/*#container {
   margin: 0 auto;
   max-width: 890px;
 }
-/*p { text-align: center; }*/
  .toggle, [id^=drop] {
  display: none;
 }
@@ -143,7 +139,7 @@
 }
 
 .active {
-  /*background-color: #4CAF50;*/
+ 
   color: #f08f00;
 }
 
@@ -155,15 +151,14 @@
   float: left;
   overflow: hidden;
 }
+*/
 
-.dropdown .dropbtn {
+/*.dropdown .dropbtn {
   font-size: 12px;    
   border: none;
   outline: none;
-  /*color: #000;*/
   padding: 14px 8px;
   background-color: inherit;
-  /*font-family: inherit;*/
   margin: 0;
   font-weight: 700;
 }
@@ -184,7 +179,6 @@
 
 .dropdown-content a {
   float: none;
-  /*color: black;*/
   padding: 11px 16px;
   text-decoration: none;
   display: block;
@@ -194,12 +188,10 @@
 }
 
 .topnav a:hover, .dropdown:hover .dropbtn {
-  /*background-color: #555;*/
   color: #f08f00;
-}
+}*/
 
-.dropdown-content a:hover {
-  /*background-color: #ddd;*/
+/*.dropdown-content a:hover {
   color: #f08f00;
 }
 
@@ -225,9 +217,7 @@
     right: 0px;
     position: absolute;
     float: right;
-    /*right: -5px;*/
     display: block;
-    /*background: #fff;*/
     border-radius: 4px;
     font-size: 27px;
     width: 70px;
@@ -246,8 +236,8 @@
     top: 12px;
   }
 
-}
-@media screen and (max-width: 768px) {
+}*/
+/*@media screen and (max-width: 768px) {
  
   .topnav a {
    
@@ -255,13 +245,11 @@
     text-decoration: none;
     font-size: 9px;
     font-weight: 700;
-    /*margin-top: 13px;*/
 }
 .dropdown .dropbtn {
     font-size: 9px;
     padding: 14px 2px;
-    /*margin-top: 12px;*/
-    
+   
 }
 .contactBarres{
   right: 0px! important;
@@ -272,13 +260,12 @@
   padding-bottom: 0px;
   padding-top: 0px;
   padding-left: 15px;
-  /*font-weight: 400 ! important;*/
+ 
 }
 .dropdownintab{
   padding-bottom: 0px ! important;
   padding-top: 0px ! important;
-  /*font-weight: 400 ! important;*/
-
+ 
 }
 .expertise_a{
   font-weight: 400 ! important;
@@ -312,11 +299,10 @@
 
   }
 }
-
-@media screen and (max-width: 600px) {
+*/
+/*@media screen and (max-width: 600px) {
 
    .topnav a{
-    /*font-size: 0px ! important;*/
    }
    .topnav a.icon{
     top:-3px ! important;
@@ -336,11 +322,10 @@
   .topnav.responsive {
     position: absolute;
     background-color: #333333f5;
-    /*top: -45px;*/
     width: 410px;
     top:-82px;
     height: 570px;
-    /*height: 529px;*/
+  
     left: -14px;
     z-index: 1001;
     padding-top: 60px;
@@ -357,7 +342,7 @@
     float: none;
     color:#fff;
     display: block;
-    /*text-align: right;*/
+   
   }
   .topnav.responsive .dropdown {float: none;}
   .topnav.responsive .dropdown-content {position: relative;}
@@ -365,7 +350,7 @@
     display: block;
     width: 100%;
     color:#fff;
-    /*text-align: right;*/
+   
     
   }
   .topnav.responsive .dropdown-content{
@@ -384,7 +369,7 @@
   transition-duration: 0.8s;
 }
 .headerlogo img{
-  /*margin-top: 15px;*/
+ 
   height: 75px;
 }
 .headerflowscroll{
@@ -401,7 +386,7 @@
     padding-left: 40px;
 }
 .columnhead{
-  /*line-height: 20px;*/
+ 
   font-weight: 700 ! important;
   font-size: 12px ! important;
   text-align: center;
@@ -415,15 +400,15 @@
 }
 .column {
   float: left;
-  /*width: 25%;*/
+
   padding: 10px;
   background-color:#fff;
-  /*height: 430px;*/
+ 
   padding:0px;
 }
 .setlogo{
   padding-left: 60px;
-  /*padding-top: 7px;*/
+  
 }
 
 .contactBar{
@@ -506,7 +491,7 @@
   display: none !important;
 } 
 body { top: 0px !important; }    
-
+*/
 
 
 
