--- a/ui/website/src/allBlocks/Blogs/Blogs.css
+++ b/ui/website/src/allBlocks/Blogs/Blogs.css
@@ -174,3 +174,20 @@
       padding: 7px 0px;
     }
   }
+  @media only screen 
+  and (device-width: 1024px) 
+  and (device-height: 768px) 
+  and (orientation: landscape) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+    .blogbtn1{
+      padding: 7px 0px;
+      width: 220px;
+
+    }
+    .blogdate{
+      padding-top: 113px ! important;
+    }
+
+
+   
+  }
