--- a/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
+++ b/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
@@ -656,8 +656,8 @@
   }
 
   @media only screen 
-  and (min-width: 1024px) 
-  and (max-height: 1366px) 
+  and (device-width: 1024px) 
+  and (device-height: 1366px) 
   and (orientation: landscape) 
   and (-webkit-min-device-pixel-ratio: 1.5) {
      .navigation_tab{
@@ -690,8 +690,38 @@
     left: 630px ! important;
     }
  
- }  
+ } 
+@media only screen 
+  and (device-width: 768px) 
+  and (device-height: 1024px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+   
+     .navigation_tab{
+      margin-left: 20px ! important;
+     }
 
+  } 
+@media only screen 
+  and (device-width: 1024px) 
+  and (device-height: 768px) 
+  and (orientation: landscape) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+   
+     .navigation_tab{
+      margin-left: 27px ! important;
+     }
+     .adjustfor5{
+        margin-left: 24px ! important;
+     }
+     .new_wizardNote_for6{
+        right: 30px ! important;
+     }
+     .new_wizardNotefor9{
+        right: 5px ! important;
+     }
+
+  } 
 
 
 
