--- a/ui/website/src/common/Footer/Footer.css
+++ b/ui/website/src/common/Footer/Footer.css
@@ -604,6 +604,9 @@ ul.no-icon-list1 {
   .blogdate{
     margin-top: -54px ! important;
   }
+  .footerdiv1{
+    padding: 0px;
+  }
    
 }
   @media only screen and (device-width : 375px) and (device-height : 812px) { 
